--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -26,7 +26,7 @@
               {% csrf_token %}
 
               <p class="text-center mb-0">Inscrivez-vous et rejoignez</p>
-              <p class="text-center mt-0">notre communotée</p>
+              <p class="text-center mt-0">notre communautée</p>
               <div class="text-center">
                 <button class="btn btn-primary btn-sm" href="https://www.facebook.com" type="button">
                   <i class="fab fa-facebook-f"></i> Se connecter avec Facebook</button>
