--- a/templates/addbook.html
+++ b/templates/addbook.html
@@ -78,7 +78,7 @@
 
 
               <div class="d-flex justify-content-center">
-                <button class="btn btn-primary btn-sm " type="submit">Connection</button>
+                <button class="btn btn-primary btn-sm " type="submit">Ajouter le livre</button>
               </div>
 
 
