--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -39,7 +39,7 @@
           {% if request.user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link waves-effect" href="{% url 'account_logout' %} ">
-              <span > Lougout </span>
+              <span > Logout </span>
             </a>
           </li>
           {% else %}
