--- a/templates/modify.html
+++ b/templates/modify.html
@@ -12,7 +12,6 @@ Product Page
 <!--Main layout-->
 <main class="">
   <div class="container dark-grey-text mt-5">
-    {% for book in object_list %}
     <!--Grid row-->
     <div class="row wow fadeIn">
 
@@ -92,7 +91,7 @@ Product Page
 
           <div class="d-flex justify-content-left">
             <!-- Default input -->
-            <a class="btn btn-primary btn-md my-0 p" href="{{ book.get_absolute_url }}">Supprimer le livre
+            <a class="btn btn-primary btn-md my-0 p" href="{% url 'delete' book.id %}">Supprimer le livre
             </a>
 
           </div>
@@ -105,48 +104,6 @@ Product Page
 
     </div>
     <!--Grid row-->
-    {% endfor %}
-
-    
-    <!--Pagination-->
-    {% if is_paginated %}
-    <nav class="d-flex justify-content-center wow fadeIn">
-      <ul class="pagination pg-blue">
-        <!--Arrow left-->
-        {% if page_obj.has_previous %}
-        <li class="page-item">
-          <a class="page-link" href="?page={{page_obj.previous_page_number}} " aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-            <span class="sr-only">Previous</span>
-          </a>
-          {% endif %}
-          {% if page_obj.has_previous %}
-        <li class="page-item">
-          <a class="page-link" href="?page={{page_obj.previous_page_number}}">{{page_obj.previous_page_number}}</a>
-        </li>
-        {% endif %}
-        <li class="page-item active">
-          <a class="page-link" href="?page={{page_obj.number}}">{{page_obj.number}}
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        {% if page_obj.has_next %}
-        <li class="page-item">
-          <a class="page-link" href="?page={{page_obj.next_page_number}}">{{page_obj.next_page_number}}</a>
-        </li>
-        {% endif %}
-        {% if page_obj.has_next %}
-        <li class="page-item">
-          <a class="page-link" href="?page={{page_obj.next_page_number}}" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-            <span class="sr-only">Next</span>
-          </a>
-        </li>
-        {% endif %}
-      </ul>
-    </nav>
-    {% endif %}
-    <!--Pagination-->
 
 
 
